--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -3,6 +3,7 @@
 <p>
   <strong>Title:</strong>
   <%= @blog.title %>
+  <small>Submitted <%= time_ago_in_words(@blog.created_at) %> ago</small>
 </p>
 
 <p>
@@ -12,3 +13,15 @@
 
 <%= link_to 'Edit', edit_blog_path(@blog) %> |
 <%= link_to 'Back', blogs_path %>
+
+
+<h3>Comments</h3>
+
+<%= form_for [@blog, Comment.new] do |f| %>
+  <%= f.text_area :body, placeholder: "Add a comment" %><br/>
+  <%= f.submit "Add Comment" %>
+<% end %>
+
+<ul>
+  <%= render(partial: 'comments/comment', collection: @blog.comments) %>
+</ul>
