Installed devise and added data for seeds

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,10 +1,12 @@
 <li>
   <%= comment.body %> -
-  <small>Submitted <%= time_ago_in_words(comment.created_at) %> ago</small>
+  <small>Submitted <%= time_ago_in_words(comment.created_at) %> ago by <%= current_user.name %></small><br/>
 
   <%= form_for [comment, Comment.new] do |f| %>
-    <%= f.text_area :body, placeholder: "Add a Reply" %><br/>
-    <%= f.submit "Reply"  %>
+    <div class="field">
+      <%= f.text_area :body, placeholder: "Add a Reply" %><br/>
+      <%= f.submit "Reply"  %>
+    </div>
   <% end %>
 
   <ul>
