--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,7 +3,15 @@
   <%= link_to 'About', pages_about_path %>
   <%= link_to 'Contact', pages_contact_path %>
   <%= link_to 'Blogs', blogs_path %>
-
+  <% if current_user %>
+    <%= link_to "Logout", destroy_user_session_path, method: :delete %> 
+    <%= link_to "Edit Account", edit_user_registration_path %>
+  <% else %>
+    <%= link_to "Register", new_user_registration_path %> 
+    <%= link_to "Login", new_user_session_path %> 
+  <% end %>
 </div>
+
+
 
 
