--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <li>
   <%= comment.body %> -
-  <small>Submitted <%= time_ago_in_words(comment.created_at) %> ago by <%= current_user.name %></small><br/>
+  <small>Submitted <%= time_ago_in_words(comment.created_at) %> ago </small><br/>
 
   <%= form_for [comment, Comment.new] do |f| %>
     <div class="field">
